--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 		"server": "nodemon index.js --ignore ./client/",
 		"client": "npm run start --prefix client",
 		"dev": "concurrently \"npm run server\" \"npm run client\"",
-		"heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+		"heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
+		"webhook": "forever start ./sendgrid_webhook.js"
 	},
 	"author": "",
 	"license": "ISC",
@@ -21,10 +22,13 @@
 		"concurrently": "^5.1.0",
 		"cookie-session": "^1.4.0",
 		"express": "^4.17.1",
+		"localtunnel": "^2.0.0",
+		"lodash": "^4.17.15",
 		"mongodb": "^3.5.3",
 		"mongoose": "^5.9.1",
 		"passport": "^0.4.1",
 		"passport-google-oauth20": "^2.0.0",
+		"path-parser": "^6.1.0",
 		"sendgrid": "^5.2.3",
 		"stripe": "^8.20.0"
 	},
